--- a/calculator.html
+++ b/calculator.html
@@ -42,9 +42,17 @@
       });
 
       result.addEventListener("click", function () {
-        const answer = eval(expression);
-        display.textContent = answer;
-        expression = answer.toString();
+        const parts = expression.split("+");
+
+        let total = 0;
+
+        parts.forEach(function (num) {
+          total += Number(num);
+        });
+
+        display.textContent = total;
+
+        expression = total.toString();
       });
     </script>
   </body>
